--- a/src/styles/dashboard-card.scss
+++ b/src/styles/dashboard-card.scss
@@ -1,6 +1,6 @@
-.dashboard-card{
+.dashboard-card {
     width: 350px;
-    height: 80px;
+    height: 150px;
     margin-top: 30px;
     background: linear-gradient(to top, #5b7cb57a, #303f54);
     box-shadow: rgb(165 199 197 / 40%) 0px -1px 0px 0px inset;
@@ -9,16 +9,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    .title{
+    .title {
         font-family: Montserrat Medium;
         font-weight: 500;
         font-size: 20px;
-        color: hsla(0,0%,100%,.6);
+        color: hsla(0, 0%, 100%, .6);
     }
-    .val{
+    .val {
         font-family: Montserrat Bold;
         font-size: 24px;
         font-weight: 700;
         color: #fff;
+    }
+    @media(max-width:768px) {
+        height: 70px;
+        .title {
+            font-size: 15pt;
+        }
+        .val {
+            font-size: 17pt;
+            font-weight: 500;
+        }
     }
 }
