--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -4,8 +4,8 @@
     flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
-    padding-left: 3.3rem;
-    padding-right: 3.3rem;
+    padding-left: 100px;
+    padding-right: 100px;
     .DashBoard-Info {
         margin: 30px 0;
         width: 100%;
