update links and add ventures.

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,7 @@
 @import "./styles/presale.scss";
 @import "./styles/stack.scss";
 @import "./styles/calculator.scss";
+@import "./styles/ventures.scss";
 ::-webkit-scrollbar {
     width: 8px;
 }
